Fix broken layout when rendering an image on server

--- a/shuttleofx_client/static_tmp/styles/render.less
+++ b/shuttleofx_client/static_tmp/styles/render.less
@@ -51,6 +51,7 @@ input.input-number{
 
 .display{
 	margin-bottom: 30px;
+	min-height: 35%;
 	img{
 		margin: auto;
 		position: relative;
